2005/08/18	tsch

	* Cairo.pm: Fix incorrect package line that read GStreamer instead
	of Ciaro.

2005/08/15	tsch

	* Cairo.pm, README: Release 0.01.  Also add stub documentation.

	* MANIFEST.SKIP: Remove CairoEnums.xs.

	* Makefile.PL: Add ABSTRACT_FROM to the WriteMakefile call.

	* TODO: Update to reflect the present situation.

2005/08/10	tsch

	* t/Cairo.t, Cairo.xs: Bind cairo_set_antialias and
	cairo_get_antialias.

	* t/CairoSurface.t, CairoSurface.xs: Bind cairo_surface_flush,
	cairo_surface_mark_dirty, cairo_surface_mark_dirty_rectangle.

	* MANIFEST, META.yml: Remove META.yml; let EU::MakeMaker generate
	it on "make dist".

	* Makefile.PL: Require cairo 0.9.0.  Add our prerequisites to the
	WriteMakefile call so that they appear in the generated META.yml.
	Support CAIRO_STATUS_FILE_NOT_FOUND.

2005/07/29	tsch

	* t/Cairo.t, xs/Cairo.xs: Wrap cairo_get_font_options.

	* t/CairoFont.t, xs/CairoFont.xs: Wrap cairo_font_face_status,
	cairo_scaled_font_status, cairo_font_options_*.  Update
	cairo_scaled_font_create.

	* t/CairoSurface.t, CairoSurface.xs: Wrap cairo_surface_status,
	cairo_surface_get_font_options.

	* Makefile.PL: Wrap the new cairo_font_options_t stuff.

	* Makefile.PL: Require cairo 0.6.0.  Add new and update the old
	enums.  Install all files necessary for other modules to use
	Cairo.

	* cairo-perl.typemap: Add a cairo_bool_t typemap.

2005/07/12	tsch

	* Cairo.pm, Cairo.xs, t/Cairo.t: Replace the %backends hash with
	Cairo::HAS_PS_SURFACE, HAS_PDF_SURFACE, HAS_XLIB_SURFACE,
	HAS_FT_FONT and HAS_PNG_FUNCTIONS.

	* Cairo.pm, CairoPattern.xs, CairoSurface.xs, Makefile.PL:
	Implement the pattern and surface hierarchy suggested by the
	language bindings guidelines.

	* Cairo.xs: Use Cairo::Context for the namespace of cairo_t,
	instead of just Cairo, as suggested by the guidelines.

	* Cairo.xs, CairoFont.xs, CairoMatrix.xs, CairoPattern.xs,
	CairoSurface.xs, cairo-perl.h: Add new, remove old API.  Shuffle
	some things around.
